Demoproject/force-app/main/default/objects/Department__c/fields/Department_Branch__c.field-meta.xml
<CustomField>
    <fullName>Department_Branch__c</fullName>
    <label>Department Branch</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Dot Net</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>