Demoproject/force-app/main/default/objects/Department__c/fields/Department_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Department_Phone_Number__c</fullName>
    <label>Department Phone Number</label>
    <type>Phone</type>
</CustomField>